--- a/biseki1.html
+++ b/biseki1.html
@@ -22,8 +22,7 @@ src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
         <ul class="wrapper">
           <li><a href="index.html">HOME</a></li>
           <li><a href="#">分野</a></li>
-          <li><a href="#">このサイトについて</a></li>
-          <li><a href="#">難易度について</a></li>
+          <li><a href="#">ABOUT</a></li>
         </ul>
       </nav>
     </header>
