ホームページの名前を変更

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <title>とある大学生の思案</title>
+    <title>べにしょうがのホームページ</title>
     <meta name="description" content="テキストテキストテキストテキストテキストテキストテキストテキス">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="">
@@ -16,7 +16,7 @@ src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
   <body>
     <header id="header">
       <h1 class="site-title wrapper">
-        <a href="index.html">とある大学生の思案</a>
+        <a href="index.html">べにしょうがのホームページ</a>
       </h1>
       <nav id="navi">
         <ul class="wrapper">
