--- a/index.html
+++ b/index.html
@@ -33,6 +33,19 @@ src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
     <div id="container" class="wrapper">
       <main>
         <p>典型問題や思いついた問題を掲載しています。</p>
+
+        <article>
+          <h2 class="article-title"><a href="insi.html">院試で勉強したことまとめ</a></h2>
+          <ul class="meta">
+            <li><a href="#">2025/05/18</a></li>
+            <li><a href="#">微分積分学</a></li>
+          </ul>
+          <p class="text">
+            テスト。
+          </p>
+          <div class="readmore"><a href="insi.html">READ MORE</a></div>
+        </article>
+        
         <article>
           <h2 class="article-title"><a href="#">全記事一覧</a></h2>
           <ul class="meta">
