--- a/insi.html
+++ b/insi.html
@@ -39,7 +39,7 @@ src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
                 目次
             </div>
             <ol>
-                <li><a href="q1">問題1</a></li>
+                <li><a href="#q1">問題1</a></li>
                 <ol>
                     <li><a href="#">解答</a></li>
                 </ol>
