行列が出力できるかテスト

--- a/insi.html
+++ b/insi.html
@@ -39,9 +39,9 @@ src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
                 目次
             </div>
             <ol>
-                <li><a href="#q1">問題1</a></li>
+                <li><a href="#senkei">線形代数</a></li>
                 <ol>
-                    <li><a href="#">解答</a></li>
+                    <li><a href="#">行列の階数</a></li>
                 </ol>
                 <li>
                     <a href="#">問題2</a>
@@ -53,11 +53,17 @@ src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
             </ol>
         </div>
 
-        <h2 id="q1">問題1</h2>
+        <h2 id="senkei">線形代数</h2>
+
+        <h3>行列の階数</h3>
 
         <div class="quebox">
-            ここに問題を書く。以下はテスト。
-            <p>\(f:\mathbb{R}^2 \to \mathbb{R}\)は\(\mathbb{R}^2\)上一様連続か.</p>
+            <p>\begin{pmatrix}
+1 & 2 & 2 \\
+2 & 3 & 4 \\
+-1 & 1 & -2 \\
+3 & 0 & 6            
+\end{pmatrix}の\mathrm{rank} を求めよ.</p>
            </div>
 
         <h3>必要な定義・定理</h3>
