--- a/insi.html
+++ b/insi.html
@@ -63,7 +63,7 @@ src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
 2 & 3 & 4 \\
 -1 & 1 & -2 \\
 3 & 0 & 6            
-\end{pmatrix}の\mathrm{rank} を求めよ.</p>
+\end{pmatrix}の\(\mathrm{rank}\) を求めよ.</p>
            </div>
 
         <h3>必要な定義・定理</h3>
