行列のテスト

--- a/insi.html
+++ b/insi.html
@@ -66,6 +66,38 @@ src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
 \end{pmatrix}の\(\mathrm{rank}\) を求めよ.</p>
            </div>
 
+        <h3>解答</h3>
+
+        <label class="open" for="pop-up"><span style="border-bottom: solid 1px red;">解答</span></label>
+                <input type="checkbox" id="pop-up">
+                <div class="overlay">
+                    <div class="window">
+                        <label class="close" for="pop-up">閉じる</label>
+                    <div class="poptitle">
+                        <h4>解答</h4>
+                    </div>
+                        <p>行基本変形によって階段行列にする.</p>
+                    <div class="eqation">
+                    <h4 style="text-align:center">\begin{pmatrix}
+1 & 2 & 2 \\
+2 & 3 & 4 \\
+-1 & 1 & -2 \\
+3 & 0 & 6            
+\end{pmatrix} \(\to\) \begin{pmatrix}
+1 & 2 & 2 \\
+0 & -1 & 0 \\
+0 & 3 & 0 \\
+0 & -6 & 0            
+\end{pmatrix} \(\to\) \begin{pmatrix}
+1 & 2 & 2 \\
+0 & 1 & 0 \\
+0 & 0 & 0 \\
+0 & 0 & 0            
+\end{pmatrix}</h4>
+                    </div>
+                    </div>
+                </div>
+
         <h3>必要な定義・定理</h3>
         クリックすると定義を参照できます。<br>
 
