--- a/insi.html
+++ b/insi.html
@@ -77,8 +77,7 @@ src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
                         <h4>解答</h4>
                     </div>
                         <p>行基本変形によって階段行列にする.</p>
-                    <div class="eqation">
-                    <h4 style="text-align:center">\begin{pmatrix}
+                    <p>\begin{pmatrix}
 1 & 2 & 2 \\
 2 & 3 & 4 \\
 -1 & 1 & -2 \\
@@ -93,8 +92,7 @@ src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
 0 & 1 & 0 \\
 0 & 0 & 0 \\
 0 & 0 & 0            
-\end{pmatrix}</h4>
-                    </div>
+\end{pmatrix}</p>
                     </div>
                 </div>
 
