--- a/insi.html
+++ b/insi.html
@@ -68,6 +68,11 @@ src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
 
         <h3>解答</h3>
 
+        <button class="accordion">詳細を見る</button>
+<div class="panel">
+  <p>ここに詳細が表示されます。</p>
+</div>
+
         <label class="open" for="pop-up"><span style="border-bottom: solid 1px red;">解答</span></label>
                 <input type="checkbox" id="pop-up">
                 <div class="overlay">
@@ -215,5 +220,6 @@ src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
 
       <p class="copyright"></p>
     </footer>
+  <script src="accordion.js"></script>
   </body>
 </html>
