--- a/insi.html
+++ b/insi.html
@@ -67,21 +67,7 @@ src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
            </div>
 
         <h3>解答</h3>
-
-        <button class="accordion">詳細を見る</button>
-<div class="panel">
-  <p>ここに詳細が表示されます。</p>
-</div>
-
-        <label class="open" for="pop-up"><span style="border-bottom: solid 1px red;">解答</span></label>
-                <input type="checkbox" id="pop-up">
-                <div class="overlay">
-                    <div class="window">
-                        <label class="close" for="pop-up">閉じる</label>
-                    <div class="poptitle">
-                        <h4>解答</h4>
-                    </div>
-                        <p>行基本変形によって階段行列にする.</p>
+<p>行基本変形によって階段行列にする.</p>
                     <p>\begin{pmatrix}
 1 & 2 & 2 \\
 2 & 3 & 4 \\
@@ -98,26 +84,10 @@ src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
 0 & 0 & 0 \\
 0 & 0 & 0            
 \end{pmatrix}</p>
-                    </div>
-                </div>
-
-        <h3>必要な定義・定理</h3>
-        クリックすると定義を参照できます。<br>
-
-        <label class="open" for="pop-up"><span style="border-bottom: solid 1px red;">一様連続</span></label>
-                <input type="checkbox" id="pop-up">
-                <div class="overlay">
-                    <div class="window">
-                        <label class="close" for="pop-up">閉じる</label>
-                    <div class="poptitle">
-                        <h4>関数の一様連続の定義</h4>
-                    </div>
-                        <p>関数 \(f:\mathbb{R}^d \to \mathbb{R}\)が\(\mathbb{R}^d\)上一様連続であるとは,次をみたすこと.</p>
-                    <div class="eqation">
-                    <h4 style="text-align:center">\(\forall \varepsilon>0,\exists \delta>0 \quad \mathrm{s.t.} \quad \forall x,y \in \mathbb{R}^d(|x-y|<\delta \Longrightarrow |f(x)-f(y)|<\varepsilon)\)</h4>
-                    </div>
-                    </div>
-                </div>
+        <button class="accordion">解答</button>
+<div class="panel">
+  
+</div>
 
         <h2>解答</h2>
 
