--- a/insi.html
+++ b/insi.html
@@ -36,12 +36,12 @@ src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
 
         <div class="toc-005">
             <div>
-                目次
+                <p id="mokuji">目次</p>
             </div>
             <ol>
                 <li><a href="#senkei">線形代数</a></li>
                 <ol>
-                    <li><a href="#">行列の階数</a></li>
+                    <li><a href="#rank">行列の階数</a></li>
                 </ol>
                 <li>
                     <a href="#">問題2</a>
@@ -55,7 +55,7 @@ src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
 
         <h2 id="senkei">線形代数</h2>
 
-        <h3>行列の階数</h3>
+        <h3 id="rank">行列の階数</h3>
 
         <div class="quebox">
             <p>\begin{pmatrix}
@@ -86,7 +86,10 @@ src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
 0 & 0 & 0 \\
 0 & 0 & 0            
 \end{pmatrix}</p>
+  <p>よって \(\mathrm{rank}\) は\(2\).</p>
 </div>
+
+        <a href="#mokuji">目次に戻る</a>
 
         <h2>解答</h2>
 
