--- a/insi.html
+++ b/insi.html
@@ -88,7 +88,29 @@ src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
 \end{pmatrix}</p>
   <p>よって \(\mathrm{rank}\) は\(2\).</p>
 </div>
+        <br>
+        <a href="#mokuji">目次に戻る</a>
 
+        <h3 id="kerim">線形写像の表現行列、核、像の基底</h3>
+
+        <div class="quebox">
+            <p>線形写像 \(f:\mathbb{R}^3 \to \mathbb{R}^2\) を \(f(x_1,x_2,x_3)=(x_1+x_2+3x_3,2x_1+3x_2+4x_3)\)の標準基底に関する表現行列と \(\mathrm{Ker}f,\mathrm{Im}f\) の基底を求めよ.</p>
+           </div>
+
+        <h3>解答</h3>
+        <button class="accordion">解答</button>
+<div class="panel">
+  <p>\(f\) の標準基底に関する表現行列は</p>
+  <p>\begin{eqnarray}
+2\times (4-1)
+&=&
+2\times 3 \\
+&=&
+6
+\end{eqnarray}</p>                 
+  <p>よって \(\mathrm{rank}\) は\(2\).</p>
+</div>
+        <br>
         <a href="#mokuji">目次に戻る</a>
 
         <h2>解答</h2>
