--- a/insi.html
+++ b/insi.html
@@ -94,7 +94,7 @@ src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
         <h3 id="kerim">線形写像の表現行列、核、像の基底</h3>
 
         <div class="quebox">
-            <p>線形写像 \(f:\mathbb{R}^3 \to \mathbb{R}^2\) を \(f(x_1,x_2,x_3)=(x_1+x_2+3x_3,2x_1+3x_2+4x_3)\)の標準基底に関する表現行列と \(\mathrm{Ker}f,\mathrm{Im}f\) の基底を求めよ.</p>
+            <p>線形写像 \(f:\mathbb{R}^3 \to \mathbb{R}^2\) を \(f(x_1,x_2,x_3)=(x_1+x_2+3x_3,2x_1+3x_2+4x_3)\)とする. \(f\)の標準基底に関する表現行列と \(\mathrm{Ker}f,\mathrm{Im}f\) の基底を求めよ.</p>
            </div>
 
         <h3>解答</h3>
@@ -102,13 +102,17 @@ src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
 <div class="panel">
   <p>\(f\) の標準基底に関する表現行列は</p>
   <p>\begin{eqnarray}
-2\times (4-1)
-&=&
-2\times 3 \\
-&=&
-6
+f(e_1) &=& e_1+2e_2 \\
+f(e_2) &=& e_1+3e_2 \\
+f(e_3) &=& 3e_1+4e_2
 \end{eqnarray}</p>                 
-  <p>よって \(\mathrm{rank}\) は\(2\).</p>
+  <p>よって</p>
+  <p>\begin{eqation}
+    (f(e_1)~f(e_2)~f(e_3))=(e_1~e_2)\begin{pmatrix}
+    1 & 1 & 3 \\
+    2 & 3 & 4
+    \end{pmatrix}.
+  \end{eqation}</p>
 </div>
         <br>
         <a href="#mokuji">目次に戻る</a>
