--- a/insi.html
+++ b/insi.html
@@ -107,12 +107,12 @@ f(e_2) &=& e_1+3e_2 \\
 f(e_3) &=& 3e_1+4e_2
 \end{eqnarray}</p>                 
   <p>よって</p>
-  <p>\begin{eqation}
+  <p>\begin{equation}
     (f(e_1)~f(e_2)~f(e_3))=(e_1~e_2)\begin{pmatrix}
     1 & 1 & 3 \\
     2 & 3 & 4
     \end{pmatrix}.
-  \end{eqation}</p>
+  \end{equation}</p>
 </div>
         <br>
         <a href="#mokuji">目次に戻る</a>
