--- a/insi.html
+++ b/insi.html
@@ -113,6 +113,7 @@ f(e_3) &=& 3e_1+4e_2
     2 & 3 & 4
     \end{pmatrix}.
   \end{equation}</p>
+  <p>が \(f\)の標準基底に関する表現行列である.</p>
 </div>
         <br>
         <a href="#mokuji">目次に戻る</a>
