--- a/insi.html
+++ b/insi.html
@@ -114,6 +114,41 @@ f(e_3) &=& 3e_1+4e_2
     \end{pmatrix}.
   \end{equation}</p>
   <p>が \(f\)の標準基底に関する表現行列である.</p>
+  <p>また表現行列に列基本変形を施すと</p>
+  <p>\begin{pmatrix}
+1 & 1 & 3 \\
+2 & 3 & 4            
+\end{pmatrix} \(\to\) \begin{pmatrix}
+1 & 0 & 0 \\
+2 & 1 & -2             
+\end{pmatrix} \(\to\) \begin{pmatrix}
+1 & 0 & 0 \\
+0 & 1 & 0            
+\end{pmatrix}</p>
+  <p>であることに注意すると</p>
+  <p>\begin{eqnarray}
+    \mathrm{Im}f &=& \{f(x)|x \in \mathbb{R}^3\} \\
+    &=& \{f(ae_1+be_2+ce_3)|a,b,c \in \mathbb{R}\} \\
+    &=& \left\{a
+    \begin{pmatrix}1 \\
+    2\end{pmatrix} +b
+    \begin{pmatrix}1 \\
+    3\end{pmatrix} +c
+    \begin{pmatrix}3 \\
+    4\end{pmatrix} \mid a,b,c \in \mathbb{R}\right\} \\
+    &=& \left\{a
+    \begin{pmatrix}1 \\
+    0\end{pmatrix} +b
+    \begin{pmatrix}0 \\
+    1\end{pmatrix} \mid a,b \in \mathbb{R}\right\}
+  \end{eqnarray}</p>
+  <p>より \(\mathrm{Im}f\) の基底は \(\begin{pmatrix}
+    1 \\
+    0
+    \end{pmatrix},\begin{pmatrix}
+    0 \\
+    1
+    \end{pmatrix}\).</p>
 </div>
         <br>
         <a href="#mokuji">目次に戻る</a>
