--- a/insi.html
+++ b/insi.html
@@ -171,8 +171,21 @@ f(e_3) &=& 3e_1+4e_2
     \end{pmatrix}+c\begin{pmatrix}
     3 \\
     -2
-    \end{pmatrix}=0\right\}
+    \end{pmatrix}=0\right\} \\
+    &=& \left\{\begin{pmatrix}
+    a \\
+    b \\
+    c\end{pmatrix} \mid a+b+3c=0,b-2c=0\right\} \\
+    &=& \left\{\begin{pmatrix}
+    -5k \\
+    2k \\
+    k\end{pmatrix} \mid k \in \mathbb{R}\right\}
   \end{eqnarray}</p>
+  <p>なので\(\mathrm{Ker}f\) の基底は \(\begin{pmatrix}
+    -5 \\
+    2 \\
+    1
+    \end{pmatrix}\)</p>
 </div>
         <br>
         <a href="#mokuji">目次に戻る</a>
