--- a/insi.html
+++ b/insi.html
@@ -43,8 +43,11 @@ src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
                 <ol>
                     <li><a href="#rank">行列の階数</a></li>
                 </ol>
+                <ol>
+                    <li><a href="#kerim">線形写像の表現行列、核、像の基底</a></li>
+                </ol>
                 <li>
-                    <a href="#">問題2</a>
+                    <a href="#">微分積分</a>
                     <ol>
                         <li><a href="#">解答</a></li>
                         <li><a href="#">コメント</a></li>
@@ -185,8 +188,18 @@ f(e_3) &=& 3e_1+4e_2
     -5 \\
     2 \\
     1
-    \end{pmatrix}\)</p>
+    \end{pmatrix}\).</p>
 </div>
+
+        <div class="rmkbox">
+          <p>線形写像\(f:\mathbb{R}^m \to \mathbb{R}^n\)がある行列 \(A\) を用いて</p>
+          <p>\begin{equation}
+            f(x)=Ax\quad(x \in \mathbb{R}^m)
+          \end{equation}</p>
+          <p>と表わされているとき, \(f\) の標準基底に関する表現行列はAと一致する.(また,基底を変えると表現行列も変わる)</p>
+          <p>\(\mathrm{Im}f\)の基底を求めるときの３つ目の等号は定数倍した列ベクトルの足し引きをしてcを消去している.列基本変形は列ベクトルの足し引きをしているだけなので
+            変形前の列ベクトルが生成する部分空間と変形後の列ベクトルが生成する部分空間は一致する.よって列基本変形を行った方が簡単に基底を求められる.</p>
+        </div>
         <br>
         <a href="#mokuji">目次に戻る</a>
 
