--- a/insi.html
+++ b/insi.html
@@ -225,6 +225,14 @@ f(e_3) &=& 3e_1+4e_2
   <p>\(\frac{\sqrt{|hk|}}{\sqrt{h^2+k^2}}=\frac{\sqrt{|m|}}{\sqrt{(m^2+1)}}\).</p>
   <p>一方先に \(h \to 0\)としてから \(k \to 0\)とすると\(0\)になるから点\((0,0)\)で全微分不可能.</p>
 </div>
+        <div class="rmkbox">
+          <p>実数値の\(n\)変数関数\(f\)が点\(x \in \mathbb{R}^n\)で全微分可能であるか確かめるには次のように確認すればよい.</p>
+          <ol>
+  <li>\(f\)がその点で連続かどうかを確かめる(不連続なら全微分可能)</li>
+  <li>\(f_{x_1},f_{x_2},\ldots,f_{x_n}\)を計算する(偏微分不可能なら全微分不可能)</li>
+  <li>\(\lim_{h \to 0}\)\frac{f(x+h)-f(x)-\sum_{k=1}^n f_{x_k}(x)h_k}{\|h\|} \to 0なら全微分可能.</li>
+</ol>
+        </div>
         <br>
         <a href="#mokuji">目次に戻る</a>
 
