--- a/insi.html
+++ b/insi.html
@@ -50,7 +50,8 @@ src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
                     <a href="#bibunsekibun">微分積分</a>
                     <ol>
                         <li><a href="#zenbibunkanousei">全微分可能性の確認</a></li>
-                        <li><a href="#">コメント</a></li>
+                        <li><a href="#gouseihenbibun">合成関数の偏微分</a></li>
+                      <li><a href="#">コメント</a></li>
                     </ol>
                 </li>
             </ol>
@@ -232,8 +233,30 @@ f(e_3) &=& 3e_1+4e_2
   <li>2.\(f_{x_1},f_{x_2},\ldots,f_{x_n}\)を計算する(偏微分不可能なら全微分不可能)</li>
   <li>3.\(\displaystyle{\lim_{h \to 0}\frac{f(x+h)-f(x)-\sum_{k=1}^n f_{x_k}(x)h_k}{\|h\|} = 0}\)なら全微分可能.</li>
 </ol>
-          <p>(ただし,\(x=(x_1,x_2,\ldots,x_n),h=(h_1,h_2,\ldots,h_n),\)でノルムはユークリッド距離.)</p>
+          <p>(ただし,\(x=(x_1,x_2,\ldots,x_n),h=(h_1,h_2,\ldots,h_n)\)でノルムはユークリッド距離.)</p>
         </div>
+        <br>
+        <a href="#mokuji">目次に戻る</a>
+
+        <h3 id="#gouseihenbibun">合成関数の偏微分</h3>
+
+        <div class="quebox">
+            <p>
+              \(z=f(x,y),x=r\cos\theta,y=r\sin\theta\)とする.このとき
+            </p>
+          <p>\begin{eqation}
+            \frac{\partial^2 z}{\partial x^2}+\frac{\partial^2 z}{\partial y^2}=\frac{\partial^2 z}{\partial r^2}+\frac{1}{r}\frac{\partial z}{\partial r}+\frac{1}{r^2}\frac{\partial^2 z}{\partial \theta^2}
+          \end{eqation}</p>
+          <p>が成り立つことを示せ.</p>
+           </div>
+
+        <h3>解答</h3>
+        <button class="accordion">解答</button>
+<div class="panel">
+  <p>
+    
+  </p>
+</div>
         <br>
         <a href="#mokuji">目次に戻る</a>
 
