--- a/insi.html
+++ b/insi.html
@@ -289,6 +289,13 @@ f(e_3) &=& 3e_1+4e_2
     \end{eqnarray}
           </p>
           <p>であることに注意して</p>
+          <p>
+            \begin{eqnarray}
+        &\frac{\partial}{\partial u}&\left(\frac{\partial z}{\partial x}\right)\cdot \frac{\partial x}{\partial u}+\frac{\partial z}{\partial x}\cdot \frac{\partial^2 x}{\partial u^2}+\frac{\partial}{\partial u}\left(\frac{\partial z}{\partial y}\right)\cdot \frac{\partial y}{\partial u}+\frac{\partial z}{\partial y}\cdot \frac{\partial^2 y}{\partial u^2} \\
+        & = & \left(\frac{\partial^2 z}{\partial x^2}\cdot \frac{\partial x}{\partial u}+\frac{\partial^2 z}{\partial y\partial x}\cdot \frac{\partial y}{\partial u}\right)\cdot \frac{\partial x}{\partial u}+\frac{\partial z}{\partial x}\cdot \frac{\partial^2 x}{\partial u^2}+\left(\frac{\partial^2 z}{\partial x\partial y}\cdot \frac{\partial x}{\partial u}+\frac{\partial^2 z}{\partial y^2}\cdot \frac{\partial y}{\partial u}\right)\cdot \frac{\partial y}{\partial u}+\frac{\partial z}{\partial y}\cdot \frac{\partial^2 y}{\partial u^2} \\
+        &=& \frac{\partial^2 z}{\partial x^2}\left(\frac{\partial x}{\partial u}\right)^2+\frac{\partial^2 z}{\partial y\partial x}\cdot \frac{\partial y}{\partial u}\cdot \frac{\partial x}{\partial u}+\frac{\partial z}{\partial x}\cdot \frac{\partial^2 x}{\partial u^2}+\frac{\partial^2 z}{\partial x^2}\left(\frac{\partial x}{\partial u}\right)^2+\frac{\partial^2 z}{\partial x\partial y}\cdot \frac{\partial x}{\partial u}\cdot \frac{\partial y}{\partial u}+\frac{\partial^2 z}{\partial y^2}\left(\frac{\partial y}{\partial u}\right)^2+\frac{\partial z}{\partial y}\cdot \frac{\partial^2 y}{\partial u^2}.
+    \end{eqnarray}
+          </p>
         </div>
         <br>
         <a href="#mokuji">目次に戻る</a>
