--- a/insi.html
+++ b/insi.html
@@ -238,7 +238,7 @@ f(e_3) &=& 3e_1+4e_2
         <br>
         <a href="#mokuji">目次に戻る</a>
 
-        <h3 id="#gouseihenbibun">合成関数の偏微分</h3>
+        <h3 id="gouseihenbibun">合成関数の偏微分</h3>
 
         <div class="quebox">
             <p>
