--- a/insi.html
+++ b/insi.html
@@ -244,9 +244,11 @@ f(e_3) &=& 3e_1+4e_2
             <p>
               \(z=f(x,y),x=r\cos\theta,y=r\sin\theta\)とする.このとき
             </p>
+        <div class="scroll-box">
           <p>\begin{equation}
             \frac{\partial^2 z}{\partial x^2}+\frac{\partial^2 z}{\partial y^2}=\frac{\partial^2 z}{\partial r^2}+\frac{1}{r}\frac{\partial z}{\partial r}+\frac{1}{r^2}\frac{\partial^2 z}{\partial \theta^2}
           \end{equation}</p>
+        </div>
           <p>が成り立つことを示せ.</p>
            </div>
 
@@ -260,6 +262,7 @@ f(e_3) &=& 3e_1+4e_2
         <div class="rmkbox">
           <p>合成関数の偏微分は偏微分する関数から偏微分する文字まで辿る道を全て足す.</p>
           <p>たとえば\(z=f(x,y),x=x(u,v),y=y(u,v)\)のとき</p>
+          <div class="scroll-box">
           <p>\begin{equation}
             \frac{\partial z}{\partial u}=\frac{\partial z}{\partial x}\cdot \frac{\partial x}{\partial u}+\frac{\partial z}{\partial y}\cdot \frac{\partial y}{\partial u},
             \end{equation}
@@ -269,7 +272,9 @@ f(e_3) &=& 3e_1+4e_2
             \frac{\partial z}{\partial v}=\frac{\partial z}{\partial x}\cdot \frac{\partial x}{\partial v}+\frac{\partial z}{\partial y}\cdot \frac{\partial y}{\partial v}.
             \end{equation}
           </p>
+          </div>
           <p>また二階偏微分は,</p>
+      <div class="scroll-box">
           <p>
             \begin{eqnarray}
             \frac{\partial^2 z}{\partial u^2}&=&\frac{\partial}{\partial u}\left(\frac{\partial z}{\partial u}\right) \\
@@ -277,9 +282,11 @@ f(e_3) &=& 3e_1+4e_2
     &=& \frac{\partial}{\partial u}\left(\frac{\partial z}{\partial x}\right)\cdot \frac{\partial x}{\partial u}+\frac{\partial z}{\partial x}\cdot \frac{\partial^2 x}{\partial u^2}+\frac{\partial}{\partial u}\left(\frac{\partial z}{\partial y}\right)\cdot \frac{\partial y}{\partial u}+\frac{\partial z}{\partial y}\cdot \frac{\partial^2 y}{\partial u^2}.
             \end{eqnarray}
           </p>
+      </div>
           <p>
             ここで \(\displaystyle{\frac{\partial z}{\partial x},\frac{\partial z}{\partial y}}\)が合成関数なので再び連鎖律から
           </p>
+      <div class="scroll-box">
           <p>
             \begin{eqnarray}
         \frac{\partial}{\partial u}\left(\frac{\partial z}{\partial x}\right) &=& \frac{\partial^2 z}{\partial x^2}\cdot \frac{\partial x}{\partial u}+\frac{\partial}{\partial y}\left(\frac{\partial z}{\partial x}\right)\cdot \frac{\partial y}{\partial u} \\
@@ -288,6 +295,7 @@ f(e_3) &=& 3e_1+4e_2
         &=& \frac{\partial^2 z}{\partial x\partial y}\cdot \frac{\partial x}{\partial u}+\frac{\partial^2 z}{\partial y^2}\cdot \frac{\partial y}{\partial u}
     \end{eqnarray}
           </p>
+      </div>
           <p>であることに注意して</p>
       <div class="scroll-box">
           <p>
