--- a/index.html
+++ b/index.html
@@ -45,6 +45,18 @@ src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
           </p>
           <div class="readmore"><a href="insi.html">READ MORE</a></div>
         </article>
+
+        <article>
+          <h2 class="article-title"><a href="flashcard.html">フラッシュカードアプリのテスト</a></h2>
+          <ul class="meta">
+            <li><a href="#">2025/05/23</a></li>
+            <li><a href="#"></a></li>
+          </ul>
+          <p class="text">
+            テスト。
+          </p>
+          <div class="readmore"><a href="insi.html">READ MORE</a></div>
+        </article>
         
         <article>
           <h2 class="article-title"><a href="#">全記事一覧</a></h2>
