--- a/flashcard.html
+++ b/flashcard.html
@@ -5,8 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>数学フラッシュカード</title>
     <link rel="stylesheet" href="flashcardstyle.css">
-    <script type="text/javascript" id="MathJax-script" async
-src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
+     <script>
+        window.MathJax = {
+            tex: {
+                inlineMath: [['$', '$'], ['\\(', '\\)']] // デフォルトのインライン数式設定 ($...$ と \(...\) を有効に)
+            },
+            svg: {
+                fontCache: 'global'
+            }
+        };
+    </script>
+    <script id="MathJax-script" async src="./MathJax/tex-chtml.js"></script>
 </head>
 <body>
     <div class="container">
