Add 5-question quiz mode

--- a/flashcard.html
+++ b/flashcard.html
@@ -27,6 +27,15 @@
                 <select id="tagSelect">
                     <option value="all">全ての分野</option>
                     </select>
+
+                <div class="quiz-mode-selection">
+                    <p>出題形式を選択してください:</p>
+                    <input type="radio" id="modeAll" name="quizMode" value="all" checked>
+                    <label for="modeAll">全問出題</label>
+                    <input type="radio" id="mode5" name="quizMode" value="5">
+                    <label for="mode5">5問出題</label>
+                </div>
+
                 <div class="selection-buttons">
                     <button id="startQuizBtn" class="btn">学習開始</button>
                     <button id="viewListBtn" class="btn secondary-btn">一覧で確認</button>
