--- a/index.html
+++ b/index.html
@@ -35,6 +35,19 @@ src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
         <p>典型問題や思いついた問題を掲載しています。</p>
 
         <article>
+          <h2 class="article-title"><a href="houti.html">放置ゲームのテスト</a></h2>
+          <ul class="meta">
+            <li><a href="#">2025/08/10</a></li>
+            <li><a href="#"></a></li>
+          </ul>
+          <p class="text">
+            テスト。
+          </p>
+          <div class="readmore"><a href="houti.html">READ MORE</a></div>
+        </article>
+
+        <!--
+        <article>
           <h2 class="article-title"><a href="insi.html">院試で勉強したことまとめ</a></h2>
           <ul class="meta">
             <li><a href="#">2025/05/18</a></li>
@@ -90,6 +103,7 @@ src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
           </p>
           <div class="readmore"><a href="biseki1.html">READ MORE</a></div>
         </article>
+        -->
       </main>
 
       <aside id="sidebar">
